@@ -61,6 +61,7 @@ Thank you to Damilola for his work, and to Google for sponsoring this project.
  * Ensure taggit field type-ahead options show correctly in the dark mode theme (Sage Abdullah)
  * Fix the lock description message missing the model_name variable when locked only by system (Sébastien Corbin)
  * Fix empty blocks created in migration operations (Sandil Ranasinghe)
+ * Ensure that `gettext_lazy` works correctly when using `verbose_name` on a generic Settings models (Sébastien Corbin)
 
 ### Documentation
 
