@@ -1,0 +1,19 @@
+# Generated by Django 4.0.10 on 2023-06-29 08:13
+
+from django.db import migrations
+
+
+class Migration(migrations.Migration):
+    dependencies = [
+        ("tests", "0024_fullfeaturedsnippet_country_code_and_more"),
+    ]
+
+    operations = [
+        migrations.AlterModelOptions(
+            name="importantpagesgenericsetting",
+            options={
+                "verbose_name": "Important pages settings",
+                "verbose_name_plural": "Important pages settings",
+            },
+        ),
+    ]
